--- a/black-widow_hubcap2.html
+++ b/black-widow_hubcap2.html
@@ -11,7 +11,10 @@
       <header>
         <nav role="navigation">
           <ul>
-            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55" alt="aeradsf"></a></li>            <li class="dropdown"><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="60" alt="aeradsf"></a>
+            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55"
+              alt="aeradsf"></a></li>
+        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="60"
+              alt="r"></a>
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="models.html">Models</a></li>
@@ -26,13 +29,13 @@
         </nav>
       </header>
         <article  class="config_option-controller-hubcaps">
-            <img class="image-container_hubcap" src="/trion_homepage_images/black-widow_hubcap1.jpg" width="30%" alt="config">
+            <img class="image-container_hubcap_widow" src="/trion_homepage_images/black-widow_hubcap1.jpg" alt="config">
             <div class="config-options-widow">
-                <a href="black-widow_hubcap1.html">OPTION 1</a>
-                <a href="black-widow_hubcap2.html">OPTION 2</a>        
-                <a href="black-widow_hubcap3.html">OPTION 3</a>
-                <a id="config-options_confirm-option" href="/change-apply-confirmation-black-widow.html">Confirm selection</a>   
-            </div>
+              <a href="black-widow_hubcap1.html">OPTION1</a>  
+              <a href="black-widow_hubcap2.html">OPTION2</a>        
+              <a href="black-widow_hubcap3.html">OPTION3</a>
+              <a id="config-options_confirm-option" href="/change-apply-confirmation-black-widow.html">Confirm</a>   
+          </div>
             
             
         </article>
