--- a/black-widow_design_original.html
+++ b/black-widow_design_original.html
@@ -11,9 +11,9 @@
       <header>
         <nav role="navigation">
           <ul>
-            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55"
+            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
                   alt="aeradsf"></a></li>
-            <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="60"
+            <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
                   alt="r"></a>
               <ul>
                 <li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
         </nav>
       </header>
         <article  class="config_option-controller">
-            <img src="/trion_homepage_images/racing_blk-widow.avif" alt="config">
+            <img class="hubcap-image" src="/trion_homepage_images/racing_blk-widow.avif" alt="config">
             <div class="config_options-special">
                 <a href="black-widow_design_original.html">ORIGINAL</a>
                 <a href="black-widow_design_streetkit.html">STREET KIT</a>        
