--- a/black-widow_tint2.html
+++ b/black-widow_tint2.html
@@ -11,7 +11,7 @@
       <header>
         <nav role="navigation">
           <ul>
-            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55" alt="aeradsf"></a></li>            <li class="dropdown"><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="60" alt="aeradsf"></a>
+            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100" alt="aeradsf"></a></li>            <li class="dropdown"><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="60" alt="aeradsf"></a>
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="models.html">Models</a></li>
@@ -26,7 +26,7 @@
         </nav>
       </header>
         <article  class="config_option-controller">
-            <img src="/trion_homepage_images/black-widow_window-tint2.jpg" width="100%" alt="config">
+            <img class="hubcap-image" src="/trion_homepage_images/black-widow_window-tint2.jpg" width="100%" alt="config">
             <div class="config_options-special">
                 <a href="black-widow_tint1.html">ORIGINAL</a>
                 <a href="black-widow_tint2.html">RED</a>        
