--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -9,10 +9,11 @@
 <header>
   <nav role="navigation">
     <ul>
-      <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem"
+      <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
             alt="aeradsf"></a></li>
-      <li class="dropdown"><a href=""><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem"
+      <li class="dropdown"><a href=""><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
             alt="r"></a>
+        <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="models.html">Models</a></li>
           <li><a href="about-us.html">About Us</a></li>
